# Computer_Graphics

./: .gitignore
Assignment-1/: CMakeLists.txt  main.cpp  makefile  report.tex  romans.hpp  softwareRasterizer.cpp  softwareRasterizer.hpp
Assignment-1/examples/: clock.cpp  e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  e6.cpp  e7.cpp  romans.hpp  scene3D.cpp
Assignment-1/src/: api.hpp  hw.cpp  softwareRasterizer.cpp  softwareRasterizer.hpp  sw.cpp  sw.hpp
Assignment-2/: CMakeLists.txt
Assignment-2/examples/: bunny_mesh.cpp  bunny_subdivide.cpp  cube_mesh.cpp  example.cpp  noisy_cube_mesh.cpp  sphere_mesh.cpp  square_mesh.cpp  teapot_mesh.cpp
Assignment-2/src/: mesh.cpp  mesh.hpp  parser.cpp
Assignment-3/: CMakeLists.txt  README.md
Assignment-3/examples/: cornell.cpp  path_tracing.cpp  s1.cpp  s2.cpp  s3.cpp  s4.cpp  s5.cpp  s6.cpp  s6_diffuse.cpp  s7.cpp  s8.cpp  specular.cpp  specular_diffuse.cpp  sphere_plane.cpp  spheres.cpp
Assignment-3/src/: box.cpp  box.hpp  object.cpp  object.hpp  plane.cpp  plane.hpp  pointSource.cpp  pointSource.hpp  rayTracer.cpp  rayTracer.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
Assignment-4/: CMakeLists.txt  README.md
Assignment-4/examples/: character_cloth_sim.cpp  character_sim.cpp  cloth_rigid_sim.cpp  cloth_sim.cpp  rigid_body_sim.cpp
Assignment-4/src/: bone.cpp  bone.hpp  cloth.cpp  cloth.hpp  hw.cpp  hw.hpp  mesh.cpp  mesh.hpp  rigidBody.cpp  rigidBody.hpp  simulation.cpp  simulation.hpp  viewer.cpp  viewer.hpp
